Model: MovableBrick, Effect handle at lvl Complete